--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-international-phone": "^4.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.5.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "sweetalert2": "^11.15.3",
     "yup": "^1.6.0"
   },
